# python-try

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  CONVENTIONS.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  requierements.txt  requirements.txt  sitemap.xml  tox.ini
.devcontainer/: devcontainer.json  install-uv.sh  postCreateCommand.sh
.github/: copilot-instructions.md  copilot.yml
.github/actions/setup-uv-env/: action.yml
.github/instructions/: test.instructions.md
.github/workflows/: main.yml  on-release-main.yml  release.yml  semantic-release.yml
docs/: index.md  modules.md
modules/: index.html
python_try/: __init__.py  foo.py
scripts/: check_git_config.py  init_new_project.py  rename_project.sh  setup_hook_commit_messag.py
src/python_try/: __init__.py  main.py  nmea2000.py
tests/: test_foo.py  test_main.py  test_nmea2000.py
