[project]
name = "python_try"
version = "0.0.1"
description = "This is a template repository for Python projects"
authors = [{ name = "Volker Kuehn", email = "vkuehn@more-machines.org" }]
requires-python = ">=3.13,<4.0"
readme = "README.md"
dependencies = [
    "ruff >= 0.9.7",
    "pytest (>=8.3.4,<9.0.0)",
    "pytest-cov (>=6.0.0,<7.0.0)",
    "mkdocs (>=1.6.1,<2.0.0)",
    "mkdocs-material (>=9.6.5,<10.0.0)",
    "mkdocstrings[python] (>=0.28.2,<0.29.0)",
    "tox (>=4.24.1,<5.0.0)",
    "mypy>=1.15.0,<2.0.0",
    "pip>=25.2",
]

[project.urls]
Documentation = "https://vkuehn.github.io/python-try/"
Repository = "https://github.com/vkuehn/python-try"

[tool.uv]
package = true # Enable package management (default is true)

[tool.mypy]
files = ["python_try"]
disallow_untyped_defs = true  # Use lowercase true/false for consistency
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py37"  # Consider updating to a more recent version like "py311"
line-length = 120
fix = true
lint.select = [
    "YTT",  # flake8-2020
    "S",    # flake8-bandit
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "T10",  # flake8-debugger
    "SIM",  # flake8-simplify
    "I",    # isort
    "C90",  # mccabe
    "E", "W", # pycodestyle
    "F",    # pyflakes
    "PGH",  # pygrep-hooks
    "UP",   # pyupgrade
    "RUF",  # ruff
    "TRY",  # tryceratops
]
lint.ignore = [
    "E501",  # LineTooLong
    "E731",  # DoNotAssignLambda
]

[tool.ruff.format]
preview = true

[tool.semantic_release]
version_variable = "pyproject.toml:version"
branch = "main"
upload_to_pypi = false
changelog_file = "CHANGELOG.md"
build_command = "uv build --out-dir dist/"

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["python_try"]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.setuptools]
packages = ["python_try"]
