[project]
name = "python_try"
version = "0.0.5"
description = "This is a template repository for Python projects"
authors = [{ name = "Volker Kuehn", email = "vkuehn@more-machines.org" }]
requires-python = ">=3.14,<4.0"
readme = "README.md"
dependencies = []  # this is a template project

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "python-semantic-release>=9.0.0",
    "ruff>=0.9.0",
    "mypy>=1.10.0",
    "pylint>=4.0.2",
    "tox>=4.15.0",
    "tox-uv>=1.29.0",
]
test = [
    "pytest>=8.2.2",
    "pytest-cov>=5.0.0",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.21",
    "mkdocstrings[python]>=1.0.0",
    "mkdocs-autorefs>=1.4.3",
]

[project.urls]
Documentation = "https://vkuehn.github.io/python-try/"
Repository = "https://github.com/vkuehn/python-try"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true # Enable package management (default is true)

[tool.mypy]
files = ["src/python_try"]
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py314"
line-length = 120
fix = true
lint.select = [
    "YTT",  # flake8-2020
    "S",    # flake8-bandit
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "T10",  # flake8-debugger
    "SIM",  # flake8-simplify
    "I",    # isort
    "C90",  # mccabe
    "E", "W", # pycodestyle
    "F",    # pyflakes
    "PGH",  # pygrep-hooks
    "UP",   # pyupgrade
    "RUF",  # ruff
    "TRY",  # tryceratops
    "D",    # pydocstyle
]
lint.ignore = [
    "E731",  # DoNotAssignLambda
]

[tool.ruff.format]
preview = true

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
upload_to_pypi = false
changelog_file = "CHANGELOG.md"
build_command = "uv build --out-dir dist/"

[tool.coverage.run]
branch = true
source = ["src/python_try"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
"scripts/check_git_config.py" = ["S603", "S607"]

[tool.ruff.lint.pydocstyle]
convention = "google"  # Enforce Google-style docstrings
